test/types/scalar/diten/floatingPointBadSize.good
floatingPointBadSize.chpl:1: error: illegal size 27 for real
